changed markers to green

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,6 +4,40 @@
   margin: 30px auto;
 }
 
+table {
+  font-size: 12px;
+}
+
+#listing {
+  position: absolute;
+  width: 200px;
+  height: 470px;
+  overflow: auto;
+  left: 442px;
+  top: 0px;
+  cursor: pointer;
+  overflow-x: hidden;
+}
+
+#resultsTable {
+  border-collapse: collapse;
+  width: 240px;
+}
+#rating {
+  font-size: 13px;
+  font-family: Arial Unicode MS;
+}
+.iw_table_row {
+  height: 18px;
+}
+.iw_attribute_name {
+  font-weight: bold;
+  text-align: right;
+}
+.iw_table_icon {
+  text-align: right;
+}
+/* 
 #right-panel {
   font-family: "Roboto", "sans-serif";
   line-height: 30px;
@@ -60,4 +94,4 @@ li:nth-child(odd) {
 #more {
   width: 100%;
   margin: 5px 0 0 0;
-}
+} */
