added link to dengue clusters in nav bar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -66,6 +66,11 @@ h4 {
   height: 50vh;
   margin: 30px auto;
 }
+
+.northeastcard {
+  border: 2px solid red;
+  margin: 0 auto
+}
 /* 
 table {
   font-size: 12px;
