fixed links which kept going back on top

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -263,7 +263,7 @@ li:nth-child(odd) {
   margin-bottom: 0;
 }
 
-.footer small {
+/* .footer small {
   /* padding-top: 20px;
   margin-bottom: 0; */
-}
+} */
