--- a/assets/styles.css
+++ b/assets/styles.css
@@ -77,7 +77,7 @@
 .mozzie-wipeout img {
   width: 80vw;
   display: block;
-  margin: 70px auto;
+  margin: 50px auto;
   border: 2px solid black;
 }
 
@@ -268,4 +268,5 @@ li:nth-child(odd) {
 /* .footer small {
   /* padding-top: 20px;
   margin-bottom: 0; */
-} */
+/* }  */
+*/
