--- a/assets/styles.css
+++ b/assets/styles.css
@@ -75,7 +75,8 @@
 }
 
 .mozzie-wipeout img {
-  width: 80vw;
+  /* width: 80vw; */
+  width: 100%;
   display: block;
   margin: 50px auto;
   border: 2px solid black;
@@ -147,7 +148,7 @@ h4 {
 }
 
 #map {
-  width: 80vw;
+  width: 100%;
   height: 50vh;
   margin: 30px auto;
 }
