--- a/assets/styles.css
+++ b/assets/styles.css
@@ -76,7 +76,6 @@
 }
 
 .mozzie-wipeout img {
-  /* width: 80vw; */
   width: 100%;
   display: block;
   margin: 50px auto;
@@ -174,83 +173,6 @@ table {
   overflow-x: hidden;
 }
 
-#resultsTable {
-  border-collapse: collapse;
-  width: 240px;
-}
-#rating {
-  font-size: 13px;
-  font-family: Arial Unicode MS;
-}
-.iw_table_row {
-  height: 18px;
-}
-.iw_attribute_name {
-  font-weight: bold;
-  text-align: right;
-}
-.iw_table_icon {
-  text-align: right;
-} */
-/* 
-#right-panel {
-  font-family: "Roboto", "sans-serif";
-  line-height: 30px;
-  padding-left: 10px;
-}
-
-#right-panel select,
-#right-panel input {
-  font-size: 15px;
-}
-
-#right-panel select {
-  width: 100%;
-}
-
-#right-panel i {
-  font-size: 12px;
-}
-#right-panel {
-  font-family: Arial, Helvetica, sans-serif;
-  position: absolute;
-  right: 5px;
-  top: 60%;
-  margin-top: -195px;
-  height: 330px;
-  width: 200px;
-  padding: 5px;
-  z-index: 5;
-  border: 1px solid #999;
-  background: #fff;
-}
-h2 {
-  font-size: 22px;
-  margin: 0 0 5px 0;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  height: 271px;
-  width: 200px;
-  overflow-y: scroll;
-}
-li {
-  background-color: #f1f1f1;
-  padding: 10px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-li:nth-child(odd) {
-  background-color: #fcfcfc;
-}
-#more {
-  width: 100%;
-  margin: 5px 0 0 0;
-} */
-
 .northeastcard {
   margin: 30px auto;
 }
@@ -271,4 +193,12 @@ li:nth-child(odd) {
   /* padding-top: 20px;
   margin-bottom: 0; */
 /* }  */
-*/
+
+@media (max-width: 767.98px) {
+  .navbar-nav a:first-child {
+    margin-top: 10px;
+  }
+  .navbar-nav a:last-child {
+    margin-bottom: 20px;
+  }
+}
