--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,5 @@
 .navbar {
   background: #fde3e3;
-  /* opacity: 50%; */
 }
 
 .moz-brand {
@@ -16,61 +15,50 @@
   text-align: center;
   margin-left: 25px;
 }
-/* 
-.navbar-nav a:first-child {
-  margin-top: 15px;
-}
-.navbar-nav a:last-child {
-  margin-bottom: 15px;
-} */
 
 .navbar-nav a:hover {
   color: rgb(171, 0, 0);
 }
 
-/* .navbar-toggler {
-  border: 1px solid black;
-} */
-/*  */
-.menu {
+.hamburger {
   position: relative;
   display: inline-block;
   width: 30px;
   height: 30px;
   right: 25px;
 }
-.menu span {
+.hamburger span {
   margin: 0 auto;
   position: relative;
   top: 8px;
   right: 13px;
 }
-.menu span:before,
-.menu span:after {
+.hamburger span:before,
+.hamburger span:after {
   position: absolute;
   content: "";
 }
-.menu span,
-.menu span:before,
-.menu span:after {
+.hamburger span,
+.hamburger span:before,
+.hamburger span:after {
   width: 30px;
   height: 3px;
   background-color: #000;
   display: block;
 }
-.menu span:before {
+.hamburger span:before {
   margin-top: -12px;
 }
-.menu span:after {
+.hamburger span:after {
   margin-top: 12px;
 }
-.example1 {
+.hamburger-animation {
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
-.example1:hover {
+.hamburger-animation:hover {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
