--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,8 @@
+body {
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+}
+
 .navbar {
   background: #fde3e3;
 }
@@ -70,49 +75,56 @@
   border: 2px solid black;
 }
 
-.dengue-box1 {
-  top: -30px;
-}
-
 .dengue-description {
   border: 2px dotted rgb(255, 25, 0);
-  /* width: 100%; */
-  height: 400px;
-  /* margin: 10px auto; */
+  padding: 15px 10px;
+  margin-bottom: 20px;
+}
+
+.dengue-description h4 {
+  text-align: center;
 }
 
 .dengue-description ul {
   line-height: 30px;
+  padding-left: 20px;
 }
 
 .dengue-cases {
   border: 2px dotted rgb(255, 25, 0);
-  height: 400px;
-  /* margin: 10px auto; */
+  padding: 15px 10px;
 }
+.dengue-cases h4 {
+  text-align: center;
+}
+
+.div-for-icon {
+  text-align: center;
+}
+
+.mosq-icon {
+  width: 120px;
+  height: 100px;
+}
+
+.div-for-cases {
+  text-align: center;
+}
+
+.reported-cases {
+  font-size: 2rem;
+  font-weight: bold;
+  /* text-align: center; */
+}
+
+/* .dengue-box1 {
+  top: -30px;
+} 
 
 h4 {
   text-decoration: underline;
 }
-
-.mosq-icon {
-  border: 1px solid red;
-  /* display: inline; */
-  width: 130px;
-  height: 110px;
-  /* margin: 40px 20px; */
-}
-
-.number-cases {
-  /* position: relative; */
-  /* display: inline; */
-  /* float: right; */
-}
-
-.reported-cases {
-  font-size: 2.5rem;
-  font-weight: bold;
-}
+ */
 
 /* #givespace {
   height: 40px;
@@ -191,6 +203,17 @@ table {
   margin-bottom: 0;
 }
 
+@media (min-width: 992px) {
+  .dengue-cases {
+    height: 296px;
+  }
+  .mosq-icon {
+    width: 140px;
+    height: 120px;
+    margin-top: 15px;
+  }
+}
+
 @media (max-width: 767.98px) {
   .navbar-nav a:first-child {
     margin-top: 10px;
@@ -200,11 +223,5 @@ table {
   }
   .mozzie-wipeout img {
     width: 100%;
-  }
-}
-
-@media (min-width: 767.98px) {
-  .dengue-box2 {
-    top: -30px;
   }
 }
