--- a/assets/styles.css
+++ b/assets/styles.css
@@ -231,12 +231,12 @@ table {
   /* margin-bottom: 10px; */
 }
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   .eastcard i {
     line-height: 30px;
     margin-right: 9px;
   }
-}
+} */
 
 @media (max-width: 767.98px) {
   .navbar-nav a:first-child {
