--- a/assets/styles.css
+++ b/assets/styles.css
@@ -131,7 +131,7 @@ body {
   color: rgb(171, 0, 0);
 }
 
-#givespace2 {
+#abovezones {
   height: 40px;
 }
 
@@ -296,6 +296,33 @@ thead .table-header {
 
 .footer-mosq:hover {
   filter: drop-shadow(2px 3px 2px rgb(116, 107, 107));
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(0, 2px, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(-2px, 1px, 0);
+  }
 }
 
 .footer small {
