--- a/assets/styles.css
+++ b/assets/styles.css
@@ -212,6 +212,20 @@ body {
   font-weight: bold;
   font-size: 1.5rem;
   margin-top: 25px;
+  margin-bottom: 0;
+}
+
+.select-zone small a {
+  color: rgb(171, 2, 2);
+}
+
+.select-zone small a:hover {
+  color: rgb(109, 2, 2);
+  text-decoration: none;
+}
+
+.zonebtns {
+  margin-top: 10px;
 }
 
 .zonebtns .north-east {
