--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,8 +16,8 @@ body {
 .navbar-nav a {
   font-family: "Rubik", sans-serif;
   color: #333333;
-  font-weight: bold;
-  font-size: 1.1rem;
+  font-weight: bolder;
+  font-size: 1.2rem;
   text-align: center;
   margin-left: 25px;
 }
