--- a/assets/styles.css
+++ b/assets/styles.css
@@ -235,6 +235,21 @@ body {
   height: 40px;
 }
 
+/* Random mosquito 1 */
+.small-mosquito1 {
+  width: 40px;
+  height: 30px;
+  position: relative;
+  top: 3vw;
+  left: 60vw;
+}
+
+.small-mosquito1:hover {
+  animation: shake 1s cubic-bezier(0.86, 0.6, 0.64, 0.47) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
 /* Start of Select zones section */
 .select-zone h3 {
   font-family: "Rubik", sans-serif;
@@ -339,15 +354,16 @@ body {
   margin: 30px auto;
 }
 
-.small-mosquito {
+.small-mosquito2 {
   width: 40px;
   height: 30px;
   position: relative;
+  top: 4vw;
   left: 20vw;
 }
 
-.small-mosquito:hover {
-  animation: shake 0.52s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+.small-mosquito2:hover {
+  animation: shake 0.6s cubic-bezier(0.46, 0.2, 0.64, 0.47) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
@@ -455,7 +471,7 @@ tr:nth-child(even) {
 }
 
 .small-mosq:hover {
-  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  animation: shake 1s cubic-bezier(0.36, 0.37, 0.89, 0.47) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
